- Добавлена возможность продлевать(обновлять)лицензию, активировать и получать все активные лицензии для устройства. - Исправлены методы сервисов с учетом принципов чистой архитектуры - Добавлены кастомные ошибки и глобальный обработчик ошибок - Добавлен маппер для преобразования сущностей в DTO и обратно